maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:23: error: illegal start of simple expression
       }
       ^