maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!isOverBaggle()){
      keepHandOnSideWall()
    forward()
}

def keepHandOnSideWall(){
	while(isFacingWall()){
    right()
  }
  forward()
  
  left()
  if(!isFacingWall()){
    forward()
  }
  
  else{forward()
       left()
       if(isFacingWall(){
         
       })
     	}
  

}
}